pixmapdir = $(datadir)/@PACKAGE@/pixmaps

pixmap_DATA = \
	QCADesigner.ico \
	QCADesigner.svg \
	QCADesigner.win32.ico \
	QCADesigner.winxp.ico \
	QCADesigner_0_48x48x24a.png \
	QCADesigner_1_32x32x24a.png \
	QCADesigner_2_16x16x24a.png \
	QCADesigner_3_48x48x24.png \
	QCADesigner_4_32x32x24.png \
	QCADesigner_5_16x16x24.png \
	QCADesigner_6_48x48x8.png \
	QCADesigner_7_32x32x8.png \
	QCADesigner_8_16x16x8.png \
	about.png \
	about.svg \
	bus.png \
	bus.svg \
	bus_input.png \
	bus_input.svg \
	bus_output.png \
	bus_output.svg \
	cell_input.png \
	cell_input.svg \
	cell_output.png \
	cell_output.svg \
	cells_layer.png \
	center_on_pages.png \
	clock.png \
	clock.svg \
	clocking_oval.png \
	clocking_polygon.png \
	clocks_layer.png \
	default.png \
	default.svg \
	drawing_layer.png \
	eraser.png \
	graph_data_bin.png \
	graph_data_bin.svg \
	graph_data_dec.png \
	graph_data_dec.svg \
	graph_data_hex.png \
	graph_data_hex.svg \
	graph_dialog.ico \
	graph_dialog.svg \
	graph_dialog.win32.ico \
	graph_dialog.winxp.ico \
	graph_dialog_0_48x48x24a.png \
	graph_dialog_1_32x32x24a.png \
	graph_dialog_2_16x16x24a.png \
	graph_dialog_3_48x48x24.png \
	graph_dialog_4_32x32x24.png \
	graph_dialog_5_16x16x24.png \
	graph_dialog_6_48x48x8.png \
	graph_dialog_7_32x32x8.png \
	graph_dialog_8_16x16x8.png \
	insert_column_before.png \
	insert_column_before.svg \
	label.png \
	landscape.png \
	no_center_on_pages.png \
	portrait.png \
	print_down_then_over.png \
	print_over_then_down.png \
	properties.png \
	puzzle_piece_green.png \
	puzzle_piece_green.svg \
	puzzle_piece_red.png \
	puzzle_piece_red.svg \
	q_cell_alt.png \
	q_cell_alt.svg \
	q_cell_alt_circle.png \
	q_cell_alt_circle.svg \
	q_cell_array.png \
	q_cell_array.svg \
	q_cell_copy.svg \
	q_cell_def.png \
	q_cell_def.svg \
	q_cell_majority.png \
	q_cell_mirror.png \
	q_cell_mirror.svg \
	q_cell_mirror_other.png \
	q_cell_mirror_other.svg \
	q_cell_move.png \
	q_cell_pan.png \
	q_cell_pan.svg \
	q_cell_rotate.png \
	q_cell_rotate.svg \
	q_cell_translate.svg \
	reorder_layers.png \
	reorder_layers.svg \
	rotate_selection.svg \
	ruler.png \
	ruler.svg \
	substrate.png \
	substrate_layer.png \
	working_with_qcells.svg \
	zoom_extents.png \
	zoom_in.png \
	zoom_out.png

EXTRA_DIST=$(pixmap_DATA)
